add many things. a lot

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>PeerJS P2P Video</title>
     <style>
         video {
-            /* position: fixed;
-            top: 0; */
+            position: fixed;
+            inset: 0;
         }
     </style>
 </head>
